get one et all sur event
